--- a/public/views/profile/edit.html
+++ b/public/views/profile/edit.html
@@ -95,6 +95,7 @@
             <div class="panel-heading">Debug</div>
             <div class="panel-body">
                 Profile: {{ profile }} <br><br>
+                File data: {{ avatar }} <br><br>
                 Groups: {{ groups }} <br><br>
                 Selected group: {{ global.state.group.selected }}
             </div>
