--- a/public/views/profile/partials/upload-photo.html
+++ b/public/views/profile/partials/upload-photo.html
@@ -9,7 +9,7 @@
         <!-- Avatar preview -->
         <div class="row">
             <div class="col-sm-12">
-                <img ngf-src="avatar" style="width: 100%">
+                <img ngf-src="avatar || profile.photo_src" style="width: 100%">
             </div>
         </div>
         <br>
