Testing avatar uploads for groups

--- a/public/views/group/list.html
+++ b/public/views/group/list.html
@@ -39,9 +39,11 @@
                         ng-repeat="group in global.state.group.list"
                         ng-click="Rover.browseTo.group(group)"
                         href="javascript:;"
-                        class="btn btn-primary btn-metro">
+                        class="btn btn-primary btn-metro"
+                        style="background-image: url({{ group.photo_src || '' }});background-size: cover;">
 
                         <object
+                            ng-hide="group.photo_src"
                             style="pointer-events:none;"
                             type="image/svg+xml"
                             data="/images/sports/{{group.sport_id}}.svg" />
