--- a/public/views/profile/partials/upload-photo.html
+++ b/public/views/profile/partials/upload-photo.html
@@ -21,8 +21,8 @@
                     ngf-select="uploadPhoto($file)"
                     ngf-drop
                     ng-model="avatar"
-                    accept="image/jpeg"
-                    ngf-pattern="'image/jpeg'"
+                    accept="image/*"
+                    ngf-pattern="'image/*'"
                     ngf-capture="'camera'"
                     ngf-min-height="100"
                     ngf-max-size="2MB"
