Updated app version + added version number to side nav

--- a/public/views/navigation.html
+++ b/public/views/navigation.html
@@ -69,6 +69,10 @@
             </ul>
         </li>
 
+        <li style="margin: 10px 0 0; text-align: center; font-size: 0.8em;">
+            {{ global.appVersion }}
+		</li>
+
 		<!-- <li ng-controller="MovementScreenController" ng-show="Rover.isLocal == true">
             <a href="#/movements"><span>movement screen</span></a>
 			<ul style="display: block;">
