Fixing bugs + syncing app with db updates

--- a/public/views/header.html
+++ b/public/views/header.html
@@ -50,7 +50,7 @@
                     <ul class="dropdown-menu">
                         <li ng-repeat="group in global.state.group.list">
                             <a href="javascript:;" ng-click="global.state.group.selected = group">
-                                {{ group.name +' ('+ group.sport_name +')' }}
+                                {{ group.name }}
                             </a>
                         </li>
                     </ul>
