--- a/public/views/profile/list.html
+++ b/public/views/profile/list.html
@@ -73,7 +73,7 @@
     <!-- Profile list -->
     <div class="panel panel-default">
         <div class="panel-heading">
-            Athletes in {{ global.state.group.selected.name }} ({{ global.state.group.selected.sport_name }})
+            Athletes in {{ global.state.group.selected.name }}
         </div>
 
         <div class="panel-body">
