--- a/public/views/profile/partials/form.html
+++ b/public/views/profile/partials/form.html
@@ -63,79 +63,81 @@
             <div class="col-sm-4 col-md-3 text-right">
                 Weight (lbs)
             </div>
-            <div class="col-sm-4 col-md-2">
+            <div class="col-sm-4 col-md-3">
                 <input
                     class="form-control"
                     ng-model="profile.weight_lbs"
-                    placeholder="Weight (lbs)"
+                    placeholder="Weight"
                     type="number"
-                    min="50" max="500"
+                    min="1" max="1000" step="0.01"
                     required>
             </div>
         </div>
 
-        <!-- Age -->
+        <!-- Date of birth -->
         <div class="row form-group">
             <div class="col-sm-4 col-md-3 text-right">
-                Age
+                Date of Birth
             </div>
-            <div class="col-sm-4 col-md-2">
+            <div class="col-sm-8 col-md-4">
                 <input
                     class="form-control"
-                    ng-model="profile.age"
-                    placeholder="Age"
-                    type="number"
-                    min="0" max="150"
-                    required>
+                    ng-model="profile.dob"
+                    placeholder="DOB"
+                    type="text"
+                    disabled>
             </div>
         </div>
 
-        <!-- Group -->
+        <!-- Gender -->
         <div class="row form-group">
             <div class="col-sm-4 col-md-3 text-right">
-                Team
+                Gender
             </div>
-            <div class="col-sm-8 col-md-6">
-                <select ng-model="profile.group_id" class="form-control" required>
-                    <option
-                        ng-repeat="group in groups"
-                        ng-selected="group.id === profile.group_id"
-                        value="{{ group.id }}">
-
-                        {{ group.name }}
-                    </option>
+            <div class="col-sm-8 col-md-4">
+                <select ng-model="profile.gender" class="form-control">
+                    <option value="0" ng-selected="!profile.gender">(not specified)</option>
+                    <option value="1" ng-selected="profile.gender === 1">Female</option>
+                    <option value="2" ng-selected="profile.gender === 2">Male</option>
                 </select>
             </div>
         </div>
 
-        <!-- Sport -->
+        <!-- Email -->
         <div class="row form-group">
             <div class="col-sm-4 col-md-3 text-right">
-                Sport
-            </div>
-            <div class="col-sm-8 col-md-6">
-                <select ng-model="profile.primary_sport" class="form-control" required>
-                    <option
-                        ng-repeat="sport in sports"
-                        ng-selected="sport.name == profile.primary_sport"
-                        value="{{ sport.name }}">
-                        {{ sport.name }}
-                    </option>
-                </select>
-            </div>
-        </div>
-
-        <!-- Primary position -->
-        <div class="row form-group">
-            <div class="col-sm-4 col-md-3 text-right">
-                Primary Position
+                Email
             </div>
             <div class="col-sm-8 col-md-6">
                 <input
-                    type="text"
-                    ng-model="profile.primary_position"
-                    placeholder="Primary Position"
-                    class="form-control">
+                    class="form-control"
+                    ng-model="profile.email"
+                    placeholder="email@example.com"
+                    type="email">
+            </div>
+        </div>
+
+        <!-- Phone number -->
+        <div class="row form-group">
+            <div class="col-sm-4 col-md-3 text-right">
+                Phone
+            </div>
+            <div class="col-sm-8 col-md-4">
+                <input
+                    class="form-control"
+                    ng-model="profile.phone"
+                    placeholder="555-555-5555"
+                    type="tel">
+            </div>
+        </div>
+
+        <!-- Notes -->
+        <div class="row form-group">
+            <div class="col-sm-4 col-md-3 text-right">
+                Notes
+            </div>
+            <div class="col-sm-8 col-md-9">
+                <textarea class="form-control" ng-model="profile.notes" placeholder="..."></textarea>
             </div>
         </div>
     </div>
