Updated services/controllers to reflect db changes

--- a/public/views/header.html
+++ b/public/views/header.html
@@ -42,7 +42,7 @@
                         aria-haspopup="true"
                         aria-expanded="false">
 
-                        {{ global.state.group.selected.name +' ('+ global.state.group.selected.sport_name +')' }}
+                        {{ global.state.group.selected.name }}
                         <span class="caret"></span>
                     </button>
 
