--- a/public/views/profile/partials/upload-photo.html
+++ b/public/views/profile/partials/upload-photo.html
@@ -25,6 +25,10 @@
                     before uploading a photo. <br><br>
                 </span>
 
+                <span ng-show="profile.id >= 1">
+                    Temporarily disabled. <br><br>
+                </span>
+
                 <button
                     ngf-select="uploadPhoto($file)"
                     ngf-drop
@@ -34,7 +38,7 @@
                     ngf-capture="'camera'"
                     ngf-min-height="100"
                     ngf-max-size="2MB"
-                    ng-class="{'btn btn-default': true, 'disabled': profile.id < 1}">
+                    ng-class="{'btn btn-default': true, 'disabled': profile.id < 1 || true}">
 
                     Select or drag &amp; drop a photo
                 </button>
