--- a/public/views/group/partials/form.html
+++ b/public/views/group/partials/form.html
@@ -17,7 +17,7 @@
         </div>
 
         <!-- Sport -->
-        <div class="row form-group">
+        <!-- <div class="row form-group">
             <div class="col-sm-4 col-md-2">
                 Sport
             </div>
@@ -31,6 +31,6 @@
                     </option>
                 </select>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
