--- a/public/views/profile/partials/details.html
+++ b/public/views/profile/partials/details.html
@@ -22,21 +22,12 @@
                 data-value="profile.last_name">
             </div>
 
-            <!-- Profile creation date -->
-            <div
-                data-ui-editable-list-item
-                data-label="Profile Created"
-                data-display="{{ profile.created_at_formatted }}"
-                data-value="profile.created_at"
-                data-type="date">
-            </div>
-
             <!-- Height -->
             <div
                 data-ui-editable-list-item
                 data-label="Height"
-                data-display="{{ profile.feet }}&quot; {{ profile.inches }}'"
-                data-value="profile.height_cm">
+                data-display="{{ profile.feet }}' {{ profile.inches }}&quot;"
+                data-value="profile.height">
             </div>
 
             <!-- Weight -->
@@ -47,18 +38,41 @@
                 data-value="profile.weight_lbs">
             </div>
 
-            <!-- Primary Sport -->
+            <!-- Date of Birth -->
             <div
                 data-ui-editable-list-item
-                data-label="Primary Sport"
-                data-value="profile.primary_sport">
+                data-label="Date of Birth"
+                data-value="">
             </div>
 
-            <!-- Primary Position -->
+            <!-- Gender -->
             <div
                 data-ui-editable-list-item
-                data-label="Primary Position"
-                data-value="profile.primary_position">
+                data-label="Gender"
+                data-value="profile.gender">
+            </div>
+
+            <!-- Phone -->
+            <div
+                data-ui-editable-list-item
+                data-label="Phone #"
+                data-value="profile.phone">
+            </div>
+
+            <!-- Email -->
+            <div
+                data-ui-editable-list-item
+                data-label="Email"
+                data-value="profile.email">
+            </div>
+
+            <!-- Profile creation date -->
+            <div
+                data-ui-editable-list-item
+                data-label="Profile Created"
+                data-display="{{ profile.created_at_formatted }}"
+                data-value="profile.created_at"
+                data-type="date">
             </div>
 
         </div>
