Added models & migration related to movement markers, screenings and screen tests

--- a/public/views/navigation.html
+++ b/public/views/navigation.html
@@ -11,7 +11,17 @@
 
         <!-- Landing page -->
         <li>
-            <a href="#/group/list"><span>dashboard</span></a>
+            <a href="#/dashboard"><span>dashboard</span></a>
+        </li>
+
+        <!-- Profiles -->
+		<li>
+            <a href="#/profile/list"><span>athletes</span></a>
+        </li>
+
+        <!-- Groups -->
+		<li>
+            <a href="#/group/list"><span>teams</span></a>
         </li>
 
         <!-- Submit movement data form -->
