Updated gruntfile watch task for efficiency

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,7 +1,4 @@
 
-<!-- Temporary page -->
-<div class="col-sm-12">
-    <h1>
-        Welcome to your dashboard.
-    </h1>
-</div>
+<h1 class="text-center">
+    Welcome to your dashboard.
+</h1>
