--- a/public/views/navigation.html
+++ b/public/views/navigation.html
@@ -10,17 +10,29 @@
     <ul id="nav" data-slim-scroll data-collapse-nav data-highlight-active>
 
         <!-- Landing page -->
-        <li>
+        <li
+            class="onboarding-general"
+            data-step="4"
+            data-intro="This is a shortcut takes you to the dashboard"
+            data-position="right">
             <a href="#/dashboard"><span>dashboard</span></a>
         </li>
 
         <!-- Profiles -->
-		<li>
+		<li
+            class="onboarding-general"
+            data-step="5"
+            data-intro="This shortcut takes you to your athletes list"
+            data-position="right">
             <a href="#/profile/list"><span>athletes</span></a>
         </li>
 
         <!-- Groups -->
-		<li>
+		<li
+            class="onboarding-general"
+            data-step="6"
+            data-intro="This shortcut takes you to your teams list"
+            data-position="right">
             <a href="#/group/list"><span>teams</span></a>
         </li>
 
