Added avatar directive + updated image upload functions

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -65,7 +65,7 @@
             </a>
 
             <!-- Onboarding link -->
-            <button ng-click="global.onboarding.general()" class="btn btn-info">
+            <button ng-click="global.onboarding.general()" class="btn btn-primary">
                 Show me around
             </button>
         </div>
