--- a/public/views/navigation.html
+++ b/public/views/navigation.html
@@ -12,28 +12,10 @@
         <!-- Landing page -->
         <li
             class="onboarding-general"
-            data-step="4"
-            data-intro="This is a shortcut takes you to the dashboard"
+            data-step="1"
+            data-intro="This is a shortcut to your dashboard."
             data-position="right">
             <a href="#/dashboard"><span>dashboard</span></a>
-        </li>
-
-        <!-- Profiles -->
-		<li
-            class="onboarding-general"
-            data-step="5"
-            data-intro="This shortcut takes you to your athletes list"
-            data-position="right">
-            <a href="#/profile/list"><span>athletes</span></a>
-        </li>
-
-        <!-- Groups -->
-		<li
-            class="onboarding-general"
-            data-step="6"
-            data-intro="This shortcut takes you to your teams list"
-            data-position="right">
-            <a href="#/group/list"><span>teams</span></a>
         </li>
 
         <!-- Submit movement data form -->
