Fixed profile bug + fixed profile avatar resizing

--- a/public/views/navigation.html
+++ b/public/views/navigation.html
@@ -18,6 +18,11 @@
             <a href="#/dashboard"><span>dashboard</span></a>
         </li>
 
+        <!-- List of groups -->
+		<li>
+            <a href="#/group/list"><span>teams</span></a>
+        </li>
+
         <!-- Submit movement data form -->
 		<li>
             <a href="#/submit-movement"><span>submit movement data</span></a>
