--- a/public/views/profile/view.html
+++ b/public/views/profile/view.html
@@ -71,7 +71,8 @@
     		<div class="col-md-6 col-sm-12">
                 <div class="text-center" style="margin: 5% 20%; width: 60%;">
                     <ui-avatar
-                        data-upload-endpoint="uploadImageEndpoint"
+                        data-upload-endpoint="uploadAvatarEndpoint"
+                        data-success-callback="uploadAvatarCallback"
                         data-src="profile.avatar_src">
                     </ui-avatar>
                 </div>
