--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -118,8 +118,8 @@ $orangeaccent:#ff8d46;
 *************************************/
 
 html {
-  font-size: 10px;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    font-size: 10px;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 html {
@@ -141,12 +141,12 @@ body {
 }
 
 ::selection {
-  background: $orange;
+  background: $heddokogreen;
   color: #fff;
 }
 
 ::-moz-selection {
-  background: $orange;
+  background: $heddokogreen;
   color: #fff;
 }
 
