Updates to profile page

--- a/resources/angular-views/profile/partials/details.html
+++ b/resources/angular-views/profile/partials/details.html
@@ -44,7 +44,7 @@
         data-ui-editable-list-item
         data-label="Date of Birth"
         data-key="dob"
-        data-type="datetime">
+        data-type="date">
     </div>
 
     <!-- Gender -->
